# agentic-therapy-poc

./: .gitignore  CONTEXT.md  README.md
backend/: .env.example  __init__.py  config.py  main.py  pyproject.toml
backend/models/: schema.py
backend/personas/: __init__.py
backend/personas/sage/: __init__.py  handler.py  memory.py  prompt.j2  schema.py
backend/routers/: chat.py  users.py
backend/services/: anthropic_service.py  embedding.py  graphrag.py  memory_analyzer.py  neo4j.py  official_graphrag.py  router.py
backend/tests/: test_main.py
backend/utils/: __init__.py  graphrag_utils.py  name_generator.py
frontend/: .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: MemorySidebar.tsx  MessageBubble.tsx  PersonaPanel.tsx  index.ts
frontend/src/pages/: ChatPage.tsx  TherapistPortal.tsx
frontend/src/types/: views.ts
frontend/src/utils/: api.ts
