[tool.poetry]
name = "collaborative-backend"
version = "0.1.0"
description = "Backend for Collaborative PoC - An agentic therapy platform with persona-aware LLM orchestration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and web framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# LangChain and AI
langchain = "^0.1.0"
langchain-anthropic = "^0.1.1"
langchain-community = "^0.0.10"
anthropic = "^0.8.1"

# Neo4j database
neo4j = "^5.15.0"

# Data validation and serialization
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

# Environment and configuration
python-dotenv = "^1.0.0"

# HTTP client and utilities
httpx = "^0.25.2"
requests = "^2.31.0"

# Template engine for Jinja2 prompts
jinja2 = "^3.1.2"

# Date and time utilities
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.12.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
start = "uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true 